bubble sort done

--- a/07 Recursion/index.html
+++ b/07 Recursion/index.html
@@ -9,5 +9,6 @@
 <body>
 <script src="./js/printfun.js"></script>
 <script src="./js/fibonacci.js"></script>
+<script src="./js/problem_set1.js"></script>
 </body>
 </html>
