--- a/11 Bubble Sort/index.html
+++ b/11 Bubble Sort/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>    </h1>
-    <script src="./app.js"></script>
+    <script src="./bubbleSort.js"></script>
+    <script src="./defaultSort.js"></script>
 </body>
 </html>
